<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/main_base_margin"
    tools:context=".ControllerActivity">

    <TextView
        android:id="@+id/main_specific_employee_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/main_base_title_paddingBottom"
        android:text="@string/main_specific_workers_title"
        android:textSize="@dimen/titleTextSize"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/main_specific_employee_label_entreprise"
        android:layout_width="@dimen/textView_width"
        android:layout_height="wrap_content"
        android:text="@string/main_specific_compagny_title"
        android:textSize="@dimen/labelTextSize"
        app:layout_constraintBaseline_toBaselineOf="@+id/main_specific_employee_editText_entreprise"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_specific_employee_title" />

    <EditText
        android:id="@+id/main_specific_employee_editText_entreprise"
        android:layout_width="0dp"
        android:layout_height="@dimen/main_base_editText_firstname_height"
        android:layout_weight="1"
        android:inputType="textPersonName"
        android:paddingBottom="@dimen/main_base_label_paddingBottom"
        app:layout_constraintEnd_toEndOf="@+id/main_specific_employee_title"
        app:layout_constraintStart_toEndOf="@+id/main_specific_employee_label_entreprise"
        app:layout_constraintTop_toBottomOf="@+id/main_specific_employee_title"
    />

    <TextView
        android:id="@+id/main_specific_employee_label_sector"
        android:layout_width="@dimen/textView_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/main_specific_sector_title"
        android:textSize="@dimen/labelTextSize"
        app:layout_constraintBaseline_toBaselineOf="@+id/main_specific_employee_spinner_sector"
        app:layout_constraintTop_toBottomOf="@+id/main_specific_employee_label_entreprise"
        app:layout_constraintStart_toStartOf="parent"
    />

    <Spinner
        android:id="@+id/main_specific_employee_spinner_sector"
        android:layout_width="0dp"
        android:layout_height="@dimen/main_base_editText_firstname_height"
        android:layout_weight="1"
        android:contentDescription="@string/nationality_empty"
        android:entries="@array/sectors"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/main_specific_employee_label_sector"
        app:layout_constraintTop_toBottomOf="@+id/main_specific_employee_editText_entreprise"
    />


    <TextView
        android:id="@+id/main_specific_employee_label_experience"
        android:layout_width="@dimen/textView_width"
        android:layout_height="wrap_content"
        android:text="@string/main_specific_experience_title"
        android:textSize="@dimen/labelTextSize"
        app:layout_constraintTop_toBottomOf="@+id/main_specific_employee_label_sector"
        app:layout_constraintBaseline_toBaselineOf="@+id/main_specific_employee_editText_experience"
        app:layout_constraintStart_toStartOf="parent"
    />

    <EditText
        android:id="@+id/main_specific_employee_editText_experience"
        android:layout_width="0dp"
        android:layout_height="@dimen/main_base_editText_firstname_height"
        android:layout_weight="1"
        android:inputType="number"
        android:paddingBottom="@dimen/main_base_label_paddingBottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/main_specific_employee_label_experience"
        app:layout_constraintTop_toBottomOf="@+id/main_specific_employee_spinner_sector" />

    </androidx.constraintlayout.widget.ConstraintLayout>