<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/main_base_margin"
    tools:context=".ControllerActivity">

    <TextView
        android:id="@+id/main_specific_student_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/main_base_title_paddingBottom"
        android:text="@string/main_specific_students_title"
        android:textSize="@dimen/titleTextSize"
        app:layout_constraintTop_toTopOf="parent"
    />

    <TextView
        android:id="@+id/main_specific_student_label_school"
        android:layout_width="@dimen/textView_width"
        android:layout_height="wrap_content"
        android:text="@string/main_specific_school_title"
        android:textSize="@dimen/labelTextSize"
        app:layout_constraintTop_toBottomOf="@+id/main_specific_student_title"
        app:layout_constraintBaseline_toBaselineOf="@+id/main_specific_student_editText_school"
        app:layout_constraintStart_toStartOf="parent"
    />

    <EditText
        android:id="@+id/main_specific_student_editText_school"
        android:layout_width="0dp"
        android:layout_height="@dimen/main_base_editText_firstname_height"
        android:layout_weight="1"
        android:inputType="textPersonName"
        android:paddingBottom="@dimen/main_base_label_paddingBottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/main_specific_student_label_school"
        app:layout_constraintTop_toBottomOf="@+id/main_specific_student_title"
    />

    <TextView
        android:id="@+id/main_specific_student_label_diploma"
        android:layout_width="@dimen/textView_width"
        android:layout_height="wrap_content"
        android:text="@string/main_specific_graduationyear_title"
        android:textSize="@dimen/labelTextSize"
        app:layout_constraintBaseline_toBaselineOf="@+id/main_specific_student_editText_diploma"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_specific_student_label_school" />

    <EditText
        android:id="@+id/main_specific_student_editText_diploma"
        android:layout_width="0dp"
        android:layout_height="@dimen/main_base_editText_firstname_height"
        android:layout_weight="1"
        android:inputType="textPersonName"
        android:paddingBottom="@dimen/main_base_label_paddingBottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/main_specific_student_label_diploma"
        app:layout_constraintTop_toBottomOf="@+id/main_specific_student_editText_school"
    />

</androidx.constraintlayout.widget.ConstraintLayout>